--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~39.0.0",
     "typescript": "~3.9.5"
