--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ buck-out/
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
-# For more information feed the recommended setup visit:
+# For more information Feed the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
 */fastlane/report.xml
